<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.depaul.csc472.rzhuangandroidtvcontrol.Activity_config">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:stretchColumns="0">
            <TableRow>
                <TextView
                    android:text="@string/config_channel_button"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3">
                    <TableRow android:layout_marginTop="15dp">
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1">
                            <RadioButton android:id="@+id/rdbLeft"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:text="@string/config_channel_button_left"
                                android:layout_weight="1"/>
                            <RadioButton android:id="@+id/rdbMiddle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/config_channel_button_middle"
                                android:layout_weight="1"/>
                            <RadioButton android:id="@+id/rdbRight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:text="@string/config_channel_button_right"
                                android:layout_weight="1"/>
                        </RadioGroup>
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/config_label"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/config_label"
                    android:inputType="text|textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow android:layout_marginTop="15dp">
                <TextView
                    android:text="@string/control_channel"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/favorite_channel"
                    android:layout_weight="1"
                    android:text="1"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/config_channel0"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_0"
                    android:layout_column="1" />
                <Button
                    android:id="@+id/config_channel1"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_1"/>
                <Button
                    android:id="@+id/config_channel2"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_2"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/config_channel3"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_3"
                    android:layout_column="1"/>
                <Button
                    android:id="@+id/config_channel4"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_4"/>
                <Button
                    android:id="@+id/config_channel5"
                    android:text="@string/control_channel_5"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/config_channel6"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_6"
                    android:layout_column="1" />
                <Button
                    android:id="@+id/config_channel7"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_7"/>
                <Button
                    android:id="@+id/config_channel8"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_8"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/config_channel9"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_9"
                    android:layout_column="1"/>
                <Button
                    android:id="@+id/config_channel_add"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_add"/>
                <Button
                    android:id="@+id/config_channel_minus"
                    style="@style/buttonStyle"
                    android:text="@string/control_channel_minus"/>
            </TableRow>
            <TableRow android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/config_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:text="@string/config_cancel"
                    android:layout_column="2"/>
                <Button
                    android:id="@+id/config_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:text="@string/config_save"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>
