<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.depaul.csc472.rzhuangandroidtvcontrol.Activity_dvr"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <TableRow
                android:background="@color/darkyellow"
                android:layout_marginBottom="10dp">
                <TextView
                    android:text="@string/dvr_title"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/blue"/>
                <TableLayout
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <TableRow>
                        <TextView
                            android:text="@string/dvr_power"
                            style="@style/dvrScreenStyle"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/dvr_state"
                            style="@style/dvrScreenStyle"/>
                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/dvrpower"
                            android:text="@string/tv_on"
                            style="@style/dvrScreenStyle"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/dvrstate"
                            android:text="@string/dvr_state_stopped"
                            style="@style/dvrScreenStyle"
                            android:layout_marginEnd="90dp"/>
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/dvr_control_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_span="3"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_power"
            android:textSize="18sp"
            android:paddingRight="15dp"/>
        <Switch
            android:id="@+id/switchdvrpower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/btnPlay"
            android:text="@string/dvr_control_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btnStop"
            android:text="@string/dvr_control_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btnPause"
            android:text="@string/dvr_control_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/btnFastForward"
            android:text="@string/dvr_control_fastforward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btnFastRewind"
            android:text="@string/dvr_control_fastrewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnRecord"
            android:text="@string/dvr_control_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/totv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/switch_totv"/>
    </LinearLayout>
</LinearLayout>
